# SilvaViridis.Python.NginxConfBuilder

./: README.md  pyproject.toml
TypingStubs/: crossplane.pyi
src/SilvaViridis/Exe/NginxConfBuilder/Common/: BuildArgsHelper.py  DirectiveBase.py  DirectiveDict.py  GzipCompressionLevel.py  HttpStatus.py  JSWType.py  LogLevel.py  MimeType.py  MimeTypeExtensions.py  Offset.py  OffsetUnit.py  Path.py  Size.py  SizeUnit.py  TimeInterval.py  TimeIntervalGroup.py  TimeIntervalUnit.py  Variable.py  Zone.py  _ValidatorsList.py  __init__.py
src/SilvaViridis/Exe/NginxConfBuilder/Common/Validators/: NonEmptySequenceValidator.py  NonEmptyString.py  NonNegativeInt.py  PositiveInt.py  PositiveSize.py  __init__.py
src/SilvaViridis/Exe/NginxConfBuilder/Defaults/: __init__.py  _debian_12.py
src/SilvaViridis/Exe/NginxConfBuilder/Generators/: GeneratorBase.py  __init__.py
src/SilvaViridis/Exe/NginxConfBuilder/Modules/: MainContext.py
src/SilvaViridis/Exe/NginxConfBuilder/Modules/Core/: ErrorLog.py  Include.py  Pid.py  ThreadPool.py  User.py  WorkerConnections.py  WorkerProcesses.py  _DirectivesList.py  __init__.py
src/SilvaViridis/Exe/NginxConfBuilder/Modules/HttpAccess/: Allow.py  Deny.py  _DirectivesList.py  __init__.py
src/SilvaViridis/Exe/NginxConfBuilder/Modules/HttpAuthBasic/: AuthBasic.py  AuthBasicUserFile.py  _DirectivesList.py  __init__.py
src/SilvaViridis/Exe/NginxConfBuilder/Modules/HttpAuthJwt/: AuthJwt.py  AuthJwtClaimSet.py  AuthJwtHeaderSet.py  AuthJwtKeyCache.py  AuthJwtKeyFile.py  AuthJwtKeyRequest.py  AuthJwtLeeway.py  AuthJwtRequire.py  AuthJwtType.py  _DirectivesList.py  __init__.py
src/SilvaViridis/Exe/NginxConfBuilder/Modules/HttpCore/: AbsoluteRedirect.py  Aio.py  AioWrite.py  Alias.py  AuthDelay.py  ChunkedTransferEncoding.py  ClientBodyBufferSize.py  ClientBodyInFileOnly.py  ClientBodyInSingleBuffer.py  ClientBodyTempPath.py  ClientBodyTimeout.py  ClientHeaderBufferSize.py  ClientHeaderTimeout.py  ClientMaxBodySize.py  ConnectionPoolSize.py  DefaultType.py  Directio.py  DirectioAlignment.py  (+65 more)
src/SilvaViridis/Python/NginxConfBuilder/Common/: Access.py  DirectiveBase.py  Offset.py  OffsetUnit.py  Path.py  PositiveSize.py  Size.py  SizeUnit.py  TLVType.py  TimeInterval.py  TimeIntervalGroup.py  TimeIntervalUnit.py  Variable.py  Zone.py  __init__.py
src/SilvaViridis/Python/NginxConfBuilder/Defaults/: _debian_12.py  _docker.py
src/SilvaViridis/Python/NginxConfBuilder/Modules/: __init__.py
typings/: crossplane.pyi
(+105 files in other folders)
