[project]
name = "SilvaViridis.Exe.NginxConfBuilder"
version = "0.1.0"
description = "A tool to create Nginx configuration files in an OOP manner."
authors = [
    {name = "Maria Sorokina", email = "ruafelianna@ya.ru"},
]
dependencies = []
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
