[project]
name = "SilvaViridis.Exe.NginxConfBuilder"
version = "0.1.0"
description = "A tool to create Nginx configuration files in an OOP manner."
authors = [
    {name = "Maria Sorokina", email = "ruafelianna@ya.ru"},
]
dependencies = ["crossplane==0.5.8", "silvaviridis-python-common @ https://github.com/ruafelianna/SilvaViridis.Python.Common/releases/download/v0.5.1/silvaviridis_python_common-0.5.1-py3-none-any.whl", "beartype>=0.20.0"]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
